Fixed overflow issues on Train list and search

--- a/train-tracker/src/styles/Search.css
+++ b/train-tracker/src/styles/Search.css
@@ -49,6 +49,11 @@
     padding: 0.3rem;
 }
 
+.select-box {
+    width: 90%;
+    max-width: 100%;
+}
+
 .form select {
     padding: 0.5rem;
     border: 1px solid #ccc;
