--- a/train-tracker/src/styles/TrainList.css
+++ b/train-tracker/src/styles/TrainList.css
@@ -7,22 +7,28 @@
 
 .train-list {
   width: 100%;
-  max-width: 700px;
+  max-width: 100%;
   margin: 0 auto;
   padding: 20px;
   border-collapse: collapse;
   table-layout: fixed;
 }
 
-.train-list th, .train-list td{
-  padding: 15px;
-  text-align: left;
-  border: 1px solid lightgray;
+.train-list th , .train-list td{
+    font-size: .9em;
+    padding: 15px;
+    text-align: left;
+    width: 100%;
+    max-width: 100%;
+    border: 1px solid lightgray;
+    word-wrap: break-word;
+    overflow: hidden;
 }
 
 .train-list th {
   /* background-color: white; */
   color: white;
+  font-size: .65em;
 }
 
 .train-list tbody tr:hover {
